Привязка услуг к Рабочему. Новая форма, убрано из формы сотрудников