@@ -1,16 +1,14 @@
 package com.example.application.views.services;
 
-import com.example.application.data.components.ComponentDTO;
-import com.example.application.data.employees.Employees;
-import com.example.application.data.services.Services;
-
 import com.example.application.data.components.TypeOfDevice;
+import com.example.application.data.services.Services;
 import com.example.application.data.services.ServicesService;
 import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.button.ButtonVariant;
 import com.vaadin.flow.component.combobox.ComboBox;
 import com.vaadin.flow.component.grid.ColumnTextAlign;
 import com.vaadin.flow.component.grid.Grid;
+import com.vaadin.flow.component.grid.GridSortOrder;
 import com.vaadin.flow.component.icon.VaadinIcon;
 import com.vaadin.flow.component.notification.Notification;
 import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
@@ -18,7 +16,7 @@ import com.vaadin.flow.component.orderedlayout.VerticalLayout;
 import com.vaadin.flow.component.textfield.BigDecimalField;
 import com.vaadin.flow.component.textfield.NumberField;
 import com.vaadin.flow.component.textfield.TextField;
-import com.vaadin.flow.component.checkbox.CheckboxGroup;
+import com.vaadin.flow.data.provider.SortDirection;
 import com.vaadin.flow.data.renderer.NumberRenderer;
 import com.vaadin.flow.router.Menu;
 import com.vaadin.flow.router.PageTitle;
@@ -26,24 +24,24 @@ import com.vaadin.flow.router.Route;
 import com.vaadin.flow.spring.annotation.SpringComponent;
 import com.vaadin.flow.spring.annotation.UIScope;
 import jakarta.annotation.security.RolesAllowed;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.vaadin.lineawesome.LineAwesomeIconUrl;
 
 import java.text.NumberFormat;
-import java.time.Duration;
-import java.util.HashSet;
+import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 @Route("services")
 @SpringComponent
 @UIScope
 @PageTitle("Услуги")
 @Menu(order = 15, icon = LineAwesomeIconUrl.LAPTOP_CODE_SOLID)
-@RolesAllowed({"SALES","GOD"})
+@RolesAllowed({"SALES", "GOD"})
 public class ServicesView extends VerticalLayout {
+    private static final Logger logger = LoggerFactory.getLogger(ServicesView.class);
     private final ServicesService service;
-
     private final Grid<Services> grid = new Grid<>(Services.class);
     private final TextField serviceNameField = new TextField("Название услуги");
     private final BigDecimalField costField = new BigDecimalField("Стоимость");
@@ -64,7 +62,7 @@ public class ServicesView extends VerticalLayout {
         configureForm();
 
         add(grid, new HorizontalLayout(serviceNameField, costField, timeToCompleteField, typeOfDeviceComboBox),
-                    new HorizontalLayout(saveButton, deleteButton));
+                new HorizontalLayout(saveButton, deleteButton));
 
         updateList();
     }
@@ -72,18 +70,33 @@ public class ServicesView extends VerticalLayout {
     private void configureGrid() {
         grid.removeAllColumns();
 
-        grid.addColumn(Services::getServiceId).setHeader("ID");
-        grid.addColumn(Services::getServiceName).setHeader("Название");
-        grid.addColumn(s -> s.getTypeOfDevice().getTypeOfDeviceName()).setHeader("Тип устройства");
+        // Сохраняем ссылки на колонки для сортировки
+        Grid.Column<Services> typeColumn = grid.addColumn(s -> s.getTypeOfDevice().getTypeOfDeviceName())
+                .setHeader("Тип устройства")
+                .setSortable(true)
+                .setComparator((s1, s2) ->
+                        s1.getTypeOfDevice().getTypeOfDeviceName()
+                                .compareToIgnoreCase(s2.getTypeOfDevice().getTypeOfDeviceName()));
 
+        Grid.Column<Services> nameColumn = grid.addColumn(Services::getServiceName)
+                .setHeader("Название").setSortable(true);
+
+        // Остальные колонки без изменений
         grid.addColumn(
-                        new NumberRenderer<>(
-                                Services::getCost,
-                                NumberFormat.getCurrencyInstance(new Locale("ru", "RU"))
-                        ))
-                .setHeader("Стоимость").setTextAlign(ColumnTextAlign.END);
+                new NumberRenderer<>(
+                        Services::getCost,
+                        NumberFormat.getCurrencyInstance(Locale.of("ru", "RU"))
+                ))
+                        .setHeader("Стоимость").setTextAlign(ColumnTextAlign.END);
 
-        grid.addColumn(s -> s.getTimeToCompleteHours() + " ч.").setHeader("Время выполнения").setTextAlign(ColumnTextAlign.END);
+        grid.addColumn(s -> s.getTimeToCompleteHours() + " ч.")
+                .setHeader("Время выполнения").setTextAlign(ColumnTextAlign.END);
+
+        // Устанавливаем сортировку по умолчанию
+        grid.sort(List.of(
+                new GridSortOrder<>(typeColumn, SortDirection.ASCENDING),
+                new GridSortOrder<>(nameColumn, SortDirection.ASCENDING)
+        ));
 
         grid.asSingleSelect().addValueChangeListener(event -> editService(event.getValue()));
     }
@@ -92,12 +105,12 @@ public class ServicesView extends VerticalLayout {
         typeOfDeviceComboBox.setItems(service.findAllTypesOfDevices());
         typeOfDeviceComboBox.setItemLabelGenerator(TypeOfDevice::getTypeOfDeviceName);
 
-        saveButton.addClickListener(event -> saveService());
+        saveButton.addClickListener(ignored -> saveService());
         saveButton.addThemeVariants(ButtonVariant.LUMO_TERTIARY);
         saveButton.getStyle()
                 .set("margin-right", "1em")
                 .set("color", "var(--lumo-primary-text-color)");
-        deleteButton.addClickListener(event -> deleteService());
+        deleteButton.addClickListener(ignored -> deleteService());
         deleteButton.addThemeVariants(ButtonVariant.LUMO_TERTIARY);
         deleteButton.getStyle()
                 .set("margin-right", "1em")
@@ -132,7 +145,7 @@ public class ServicesView extends VerticalLayout {
             clearForm();
         } catch (Exception e) {
             Notification.show("Ошибка сохранения: " + e.getMessage(), 5000, Notification.Position.MIDDLE);
-            e.printStackTrace();
+            logger.error("Ошибка при сохранении услуги", e); // Replaced printStackTrace()
         }
     }
 
